3.2.3
	+ Send an alert if a restart is required after performing an automatic
	  update with auto-updater
3.2.2
	+ Updated installer slides
	+ Remove style in zentyal package list when sb is set as it is not
	  longer applied
	+ Remove restricted modules to get info
	+ Added missing EBox::Exceptions uses
3.2.1
	+ Check for 3.2 archive repository instead of 3.1
3.2
	+ Set version to 3.2
3.1.5
	+ Fixed regression in Update list button in Components page
3.1.4
	+ Hide transitional zentyal-ids package
3.1.3
	+ Updated slides texts and images
	+ Move package icons from software to core as required for the menu
	+ Adapted to new CSS styles
	+ Fixed regressions in components page behavior after jQuery migration
3.1.2
	+ Reset checkboxes in advanced packages section; this is need for
	  some browsers which autocompletes input by position
	+ Added menu icon
	+ Set proper permissions to preferences file when QA updates are
	  not exclusive
	+ Restart fully the webadmin module after installation, this forces
	  the regeneration of css files
	+ Removed no longer necessary jQuery noConflict()
3.1.1
	+ Ported JS code to jQuery, extracted lot of it to .js file
3.1
	+ Updated to reflect the Apache -> WebAdmin rename.
	+ Package icon for the new IPS module
	+ Depend on zentyal-core 3.1
3.0.5
	+ Fixed wrong management of preferences files
3.0.4
	+ Improved description of enable automatic updates string
	+ Force mode when restoring apt preferences file from cloud
3.0.3
	+ Adapted firstTimeMenu() for Disaster Recovery
	+ Added workaround for launchpad bug 994509, which manifests
	  showing duplicate packages in the updates list
	+ Hide enable automatic updates form when it cannot be used
	+ Errors when getting packages dependencies are displayed, this
	  fixes the empty dialog on error problem
3.0.2
	+ Make required changes for new communications add-on
	  (mailfilter in community + jabber and asterisk in comm add-on)
3.0.1